--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY='pk_test_dGhhbmtmdWwtcGlrYS05Mi5jbGVyay5hY2Nvd
 
 # Private Environment Variables
 CLERK_SECRET_KEY='sk_test_EMWEGMhwutyOy3m05Hp46mxTWgA1HxoTTOrchmlPYn'
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://jumnert:jumnertjnstore@cluster0.iuyxbuz.mongodb.net'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
